--- a/style_purogram.css
+++ b/style_purogram.css
@@ -56,6 +56,9 @@ body{
     width:1000px;
     margin-left: 100px;
 }
+.contents h3 {
+    line-height:100px;
+}
 .first h3{
     width:1200px;
     background: #7ec5ad; /*背景色*/
